--- a/css/style.css
+++ b/css/style.css
@@ -21,15 +21,30 @@
 #nav-bar{
     justify-content: space-between;
     padding: 30px;
+    background-color: var(--chef-green);
+    color: #fff;
+    box-shadow: 0px 5px 5px rgba(0,0,0,.2);
+    align-items: center;
 }
 
-#nav-bar ul{
-    list-style: none;
+#logo{
+    font-size: 20px;
+}
+
+#nav-icon{
+    background-color: #fff;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+}
+
+#nav-icon img{
+    width: 50px;
 }
 
 /* ----- <main> styling ----- */
 main{
-    border: 1px solid red;
+    /* border: 1px solid red; */
     color: var(--text-black);
 }
 
@@ -37,43 +52,54 @@ main{
     display: flex;
     flex-direction: column;
     padding: 30px 15px;
-    border: 1px dotted grey;
+    /* border: 1px dotted grey; */
 }
 
-.container h1, .container h3 {
+.container h1, .container h2 {
     margin-bottom: 15px;
     width: 60%;
 }
-#recipe-list {
-    display: flex;
-    flex-direction: row;
-    overflow: scroll;
-}
-.card{
-    border: 1px solid red;
-    width: 300px;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
-    text-align: center;
-    padding: 10px;
-    height: 200px;
-    border-radius: 20px;
-    margin-right: 15px;
+
+.container h1{
+    font-weight: 900;
 }
 
-.card.line{
-    font-weight: bolder;
+.card{
+    box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
+    display: flex;
+    width: 100%;
+    border-radius: 20px;
+    padding: 15px;
+    margin-bottom: 20px;
+    align-items: center;
+}
+
+.card img{
+    border-radius: 20px;
+    margin-right: 15px;
+    max-width: 125px;
+    height: 100px;
+}
+
+.card-stat{
+    font-weight: 400;
+}
+
+.line{
+    color: #d0d0d0;
+}
+
+.card svg{
+    margin-right: 5px;
+    color: var(--chef-green);
 }
 
 /* ----- <footer> styling ----- */
 footer{
-    border: 1px solid blue;
+    /* border: 1px solid blue; */
     display: flex;
     justify-content: space-between;
-    position:fixed;
-    bottom: 0;
     width: 100%;
     padding: 15px;
+    background-color: white;
 }
