--- a/css/style.css
+++ b/css/style.css
@@ -1,147 +1,187 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,400;0,700;0,900;1,400&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,400;0,700;0,900;1,400&display=swap");
 
-*{
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    font-family: 'Nunito', sans-serif;
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: "Nunito", sans-serif;
 }
 
-body{
-    background-image: url('https://images.unsplash.com/photo-1490818387583-1baba5e638af?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1262&q=80');
-    background-size: cover;
-    background-repeat: no-repeat;
+body {
+  background-image: url("https://images.unsplash.com/photo-1490818387583-1baba5e638af?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1262&q=80");
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 /* ----- root variables ----- */
-:root{
-    --chef-green: #2bb673;
-    --text-black: #242424;
-    --filter-white: rgba(255,255,255,0.95)
+:root {
+  --chef-green: #2bb673;
+  --text-black: #242424;
+  --filter-white: rgba(255, 255, 255, 0.95);
 }
 
-/* ----- <header> styling ----- */
-#nav-bar, #nav-bar ul{
-    display: flex;
+/* ----- <nav> styling ----- */
+#nav-bar {
+  display: flex;
+  justify-content: space-between;
+  padding: 15px 30px;
+  background-color: var(--chef-green);
+  color: #fff;
+  box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.2);
+  align-items: center;
 }
 
-#nav-bar{
-    justify-content: space-between;
-    padding: 30px;
-    background-color: var(--chef-green);
-    color: #fff;
-    box-shadow: 0px 5px 5px rgba(0,0,0,.2);
-    align-items: center;
+#menu {
+  font-size: 20px;
 }
 
-#logo{
-    font-size: 20px;
+#logo {
+  background-color: #fff;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
 }
 
-#nav-icon{
-    background-color: #fff;
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-}
-
-#nav-icon img{
-    width: 50px;
+#logo img {
+  width: 50px;
 }
 
 /* ----- custom input styling ----- */
-input:focus, textarea:focus, select:focus{
-    outline: none;
+input:focus,
+textarea:focus,
+select:focus {
+  outline: none;
 }
 
-input[type='text']{
-    border: none;
-    width: 50%;
-    padding-left: 10px;
-    background-color: rgba(0,0,0,0);
+input[type="text"] {
+  border: none;
+  width: 50%;
+  padding-left: 10px;
+  background-color: rgba(0, 0, 0, 0);
 }
 
-form{
-    width: 80%;
-    border: 1px solid var(--chef-green);
-    padding: 15px;
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    border-radius: 50px;
-    background-color: rgba(255,255,255,0.5);
-    box-shadow: 0px 3px 10px rgba(0,0,0,0.2);
+form {
+  width: 80%;
+  border: 1px solid var(--chef-green);
+  padding: 15px;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  border-radius: 50px;
+  background-color: rgba(255, 255, 255, 0.5);
+  box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.2);
 }
 
 /* ----- <main> styling ----- */
-main{
-    /* border: 1px solid red; */
-    color: var(--text-black);
-    background-color: var(--filter-white);
+main {
+  /* border: 1px solid red; */
+  color: var(--text-black);
+  background-color: var(--filter-white);
 }
 
 /* ----- intro styling ----- */
-#intro{
-    display: flex;
-    align-items: center;
-    text-align: center;
-    width: 100%;
-    padding-top: 20%;
+#intro {
+  display: flex;
+  align-items: center;
+  text-align: center;
+  width: 100%;
+  padding-top: 10%;
 }
 
-.container{
-    display: flex;
-    flex-direction: column;
-    padding: 30px 15px;
-    /* border: 1px dotted grey; */
+#intro h1 {
+  font-size: 30px;
 }
 
-.container h1, .container h2 {
-    margin-bottom: 15px;
-    width: 60%;
+.container {
+  display: flex;
+  flex-direction: column;
+  padding: 30px 15px;
+  /* border: 1px dotted grey; */
 }
 
-.container h1{
-    font-weight: 900;
+.container h1,
+.container h2 {
+  margin-bottom: 15px;
+  width: 60%;
 }
 
-.card{
-    box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
-    display: flex;
-    width: 100%;
-    border-radius: 20px;
-    padding: 15px;
-    margin-bottom: 20px;
-    align-items: center;
-    background-color: #fff;
+.container h1 {
+  font-weight: 900;
 }
 
-.card img{
-    border-radius: 20px;
-    margin-right: 15px;
-    max-width: 125px;
-    height: 100px;
+.card {
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  border-radius: 20px;
+  padding: 15px;
+  margin-bottom: 20px;
+  align-items: center;
+  background-color: #fff;
+}
+#card-header {
+  display: flex;
+  width: 100%;
 }
 
-.card-stat{
-    font-weight: 400;
+.card img {
+  border-radius: 20px;
+  margin-right: 15px;
+  max-width: 125px;
+  height: 100px;
 }
 
-.line{
-    color: #d0d0d0;
+.card-stat {
+  font-weight: 400;
 }
 
-.card svg{
-    margin-right: 5px;
-    color: var(--chef-green);
+.line {
+  color: #d0d0d0;
+}
+
+.card svg {
+  margin-right: 5px;
+  color: var(--chef-green);
+}
+
+#tag-area {
+  display: flex;
+  padding: 5px 0px;
+}
+
+.tag {
+  border: 1px solid grey;
+  padding: 5px 10px;
+  margin-right: 5px;
+  border-radius: 20px;
+  display: flex;
+  align-items: center;
+  font-size: 13px;
+}
+
+#cal {
+  border-color: orange;
+}
+
+#fat {
+  border-color: red;
+}
+
+#sug {
+  border-color: var(--chef-green);
+}
+
+#instruction-area {
+  width: 100%;
 }
 
 /* ----- <footer> styling ----- */
-footer{
-    /* border: 1px solid blue; */
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-    padding: 15px;
-    background-color: #f9f9f9;
+footer {
+  /* border: 1px solid blue; */
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  padding: 15px;
+  background-color: #f9f9f9;
 }
