--- a/css/style.css
+++ b/css/style.css
@@ -123,6 +123,7 @@ main {
 #card-header {
   display: flex;
   width: 100%;
+  margin-bottom: 30px;
 }
 
 .ct-area {
@@ -134,8 +135,8 @@ main {
 .card img {
   border-radius: 20px;
   margin-right: 15px;
-  max-width: 125px;
-  height: 100px;
+  max-width: 150px;
+  height: 125px;
 }
 
 .card-stat {
@@ -178,15 +179,33 @@ main {
   border-color: var(--chef-green);
 }
 
+.inst-link {
+  cursor: pointer;
+}
+
 #instruction-area {
   width: 100%;
+  display: none;
+  flex-direction: column;
+  justify-content: space-evenly;
+}
+
+.step-area {
+  display: flex;
+  margin: 10px 0;
+  align-items: center;
+}
+
+.step-num {
+  margin-right: 10px;
+  font-size: 25px;
 }
 
 /* ----- <footer> styling ----- */
 footer {
   /* border: 1px solid blue; */
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   width: 100%;
   padding: 15px;
   background-color: #f9f9f9;
