--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@ body {
   background-image: url("https://images.unsplash.com/photo-1490818387583-1baba5e638af?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1262&q=80");
   background-size: cover;
   background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 
 /* ----- root variables ----- */
@@ -74,9 +75,26 @@ form {
 
 /* ----- <main> styling ----- */
 main {
-  /* border: 1px solid red; */
   color: var(--text-black);
   background-color: var(--filter-white);
+}
+
+#hero {
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  box-shadow: 0px 5px 10px rgba(0,0,0,.1);
+}
+
+#hero img {
+  width: 400px;
+}
+
+#hero h1 {
+  margin: 0;
+  font-size: 50px;
 }
 
 /* ----- intro styling ----- */
@@ -88,7 +106,7 @@ main {
   padding-top: 10%;
 }
 
-#intro h1 {
+#intro h2 {
   font-size: 30px;
 }
 
@@ -99,13 +117,13 @@ main {
   /* border: 1px dotted grey; */
 }
 
-.container h1,
-.container h2 {
+.container h2,
+.container h3 {
   margin-bottom: 15px;
   width: 60%;
 }
 
-.container h1 {
+.container h2 {
   font-weight: 900;
 }
 
@@ -123,7 +141,6 @@ main {
 #card-header {
   display: flex;
   width: 100%;
-  margin-bottom: 30px;
 }
 
 .ct-area {
@@ -188,17 +205,27 @@ main {
   display: none;
   flex-direction: column;
   justify-content: space-evenly;
+  margin-top: 30px;
 }
 
 .step-area {
   display: flex;
   margin: 10px 0;
-  align-items: center;
+  align-items: flex-start;
 }
 
 .step-num {
   margin-right: 10px;
-  font-size: 25px;
+  font-size: 40px;
+  color: var(--chef-green);
+  opacity: 50%;
+}
+
+.step-text:after {
+  content: "";
+  width: 80%;
+  border-top: 1px solid rgba(0, 0, 0, 0.1);
+  display: block;
 }
 
 /* ----- <footer> styling ----- */
@@ -209,4 +236,37 @@ footer {
   width: 100%;
   padding: 15px;
   background-color: #f9f9f9;
+}
+
+@media (min-width: 700px) {
+  #hero {
+    flex-direction: row-reverse;
+    align-items: center;
+    text-align: left;
+    padding: 50px;
+    justify-content: space-around;
+    overflow: hidden;
+  }
+
+  #hero div{
+    width: 33%;
+  }
+  
+  #hero div img{
+    width: 350px;
+    margin: 0;
+  }
+
+  #hero h1{
+    font-size: 100px;
+    margin-top: -50px;
+  }
+
+  #hero img{
+    width: 600px;
+  }
+
+  #intro{
+    padding-top: 75px;
+  }
 }
