--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,6 @@ body {
   padding: 15px 30px;
   background-color: var(--chef-green);
   color: #fff;
-  box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.2);
   align-items: center;
 }
 
@@ -85,7 +84,8 @@ main {
   flex-direction: column;
   align-items: center;
   text-align: center;
-  box-shadow: 0px 5px 10px rgba(0,0,0,.1);
+  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.1);
+  padding-bottom: 50px;
 }
 
 #hero img {
@@ -97,13 +97,18 @@ main {
   font-size: 50px;
 }
 
+#hero div img {
+  display: none;
+}
+
 /* ----- intro styling ----- */
 #intro {
   display: flex;
   align-items: center;
   text-align: center;
   width: 100%;
-  padding-top: 10%;
+  padding-top: 50px;
+  padding-bottom: 0px;
 }
 
 #intro h2 {
@@ -113,8 +118,7 @@ main {
 .container {
   display: flex;
   flex-direction: column;
-  padding: 30px 15px;
-  /* border: 1px dotted grey; */
+  padding: 30px 30px;
 }
 
 .container h2,
@@ -137,6 +141,7 @@ main {
   margin-bottom: 20px;
   align-items: center;
   background-color: #fff;
+  height: 0%;
 }
 #card-header {
   display: flex;
@@ -238,35 +243,61 @@ footer {
   background-color: #f9f9f9;
 }
 
-@media (min-width: 700px) {
+@media (min-width: 1150px) {
+  #recipes .card {
+    width: 32%;
+    margin-right: 10px;
+  }
+}
+
+@media (min-width: 900px) {
   #hero {
     flex-direction: row-reverse;
     align-items: center;
     text-align: left;
-    padding: 50px;
+    padding-top: 0px;
     justify-content: space-around;
     overflow: hidden;
   }
 
-  #hero div{
+  #hero div {
     width: 33%;
   }
-  
-  #hero div img{
+
+  #hero div img {
+    display: initial;
     width: 350px;
     margin: 0;
   }
 
-  #hero h1{
+  #hero h1 {
     font-size: 100px;
     margin-top: -50px;
   }
 
-  #hero img{
-    width: 600px;
+  #hero img {
+    width: 500px;
   }
 
-  #intro{
+  #intro {
     padding-top: 75px;
+    width: 50%;
+    margin: auto;
+  }
+
+  #recipes {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+
+  .card {
+    width: 48%;
+    display: inline-flex;
+    
+  }
+
+  .card .card-title {
+    width: 100%;
   }
 }
