--- a/css/style.css
+++ b/css/style.css
@@ -131,6 +131,13 @@ main {
   font-weight: 900;
 }
 
+#temporary{
+  width: 100%;
+  text-align: center;
+  font-size: 40px;
+  color: rgba(0,0,0,.2)
+}
+
 .card {
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
   display: flex;
