--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,7 @@ body {
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
+  min-width: 400px;
 }
 
 /* ----- root variables ----- */
@@ -76,7 +77,6 @@ form {
 main {
   color: var(--text-black);
   background-color: var(--filter-white);
-  min-width: 400px;
 }
 
 #hero {
@@ -129,7 +129,6 @@ main {
 
 .container h3 {
   margin-bottom: 15px;
-  width: 60%;
 }
 
 #temporary{
@@ -143,34 +142,49 @@ main {
   padding-bottom: 75px;
 }
 
+#recipes {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
 .card {
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
   display: flex;
   flex-direction: column;
   width: 100%;
   border-radius: 20px;
-  padding: 15px;
+  padding: 0;
   margin-bottom: 20px;
   align-items: center;
   background-color: #fff;
   height: 0%;
+  overflow: hidden;
+  max-width: 400px;
 }
+
+#card-img{
+  width: 100%;
+  height: 200px;
+  background-size: 468px 346px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment:local;
+}
+
 #card-header {
   display: flex;
+  flex-direction: column;
   width: 100%;
+  justify-content: flex-end;
 }
 
 .ct-area {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-}
-
-.card img {
-  border-radius: 20px;
-  margin-right: 15px;
-  max-width: 150px;
-  height: 125px;
+  background-color: #fff;
+  padding: 15px
 }
 
 .card-stat {
@@ -188,7 +202,7 @@ main {
 
 #tag-area {
   display: flex;
-  padding: 5px 0px;
+  padding: 15px 0px;
 }
 
 .tag {
@@ -223,6 +237,7 @@ main {
   flex-direction: column;
   justify-content: space-evenly;
   margin-top: 30px;
+  padding: 0 15px;
 }
 
 .step-area {
@@ -289,18 +304,10 @@ footer {
 }
 
 /* ----- responsive styling ----- */
-@media (min-width: 1150px) {
-  #recipes .card {
-    width: 32%;
-    margin-right: 10px;
-  }
-
-  footer{
-    flex-direction: row;
-  }
-
-  .widget{
-    width: 30%;
+@media (min-width: 700px ) and (max-width: 899px){
+  .card{
+    margin-right: 30px;
+    width: 40%;
   }
 }
 
@@ -341,19 +348,41 @@ footer {
   }
 
   #recipes {
-    display: flex;
-    flex-wrap: wrap;
     justify-content: space-between;
   }
 
   .card {
-    width: 48%;
+    width: 30%;
     display: inline-flex;
+    margin-bottom: 3%; 
     
   }
 
   .card .card-title {
     width: 100%;
   }
+}
 
+@media (min-width: 1800px) {
+  #recipes{
+    justify-content: left;
+  }
+
+  #recipes .card {
+    margin-right: 2%;
+  }
+
+  footer{
+    flex-direction: row;
+  }
+
+  .widget{
+    width: 30%;
+  }
+}
+
+@media (min-width: 1900px) {
+  #recipes .card {
+    margin-right: 3%;
+  }
 }
